test/negative/parse_missing_colon_var.mut
# Negative: missing colon in variable declaration
x i64 = 10
